# 2D-Race

./: CMakeLists.txt  DoStrada.cpp  DoStrada.hpp  Fuel.cpp  Fuel.hpp  Funzioni.cpp  Funzioni.h  Gas.cpp  Gas.hpp  Liste.cpp  Liste.h  Macchina.cpp  Macchina.hpp  Menu.cpp  Menu.hpp  Ostacolo1.cpp  Ostacolo1.hpp  Ostacolo2.cpp  Ostacolo2.hpp  Ostacolo3.cpp  Ostacolo3.hpp  Pausa.cpp  Pausa.hpp  README.md  Score.cpp  Score.hpp  Title.cpp  Title.hpp  main.cpp
