cmake_minimum_required(VERSION 3.16)
project(2D_Race)

set(CMAKE_CXX_STANDARD 14)

add_executable(2D_Race main.cpp DoStrada.cpp DoStrada.hpp Ostacolo1.cpp Ostacolo1.hpp Fuel.cpp Fuel.hpp Macchina.cpp Macchina.hpp Menu.cpp Menu.hpp Funzioni.cpp Funzioni.h Gas.cpp Gas.hpp Ostacolo2.cpp Ostacolo2.hpp Ostacolo3.cpp Ostacolo3.hpp Score.cpp Score.hpp Pausa.cpp Pausa.hpp Title.cpp Title.hpp Liste.cpp Liste.h)